# avp_GLES

./: Makefile  Makefile.in  README  README.pandora  config.h  config.h.in  config.status  configure  configure.ac  testBash.sh
AvP/: AvP.mk  AvP.project  AvP.txt  AvP.workspace  AvP_wsp.mk  cscope_file.list  tags
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  cdplayer.c  eglport.c  fixer.h  fmv.c  main.c  menus.c  net.c  net.h  oglfunc.c  oglfunc.h  openal.c  opengl.c  opengl.h
src/Input/: JoystickInput.c  Makefile.am  MenuInput.c  usr_io.c  usr_io.h
src/Video/: Makefile.am  OpenGLInit.c  OpenGLInit.h  VideoModes.c  VideoModes.h
src/avp/: Makefile  Makefile.am  Makefile.in  avpview.c  bh_alien.c  bh_alien.h  bh_deathvol.c  decal.c  decal.h  dynamics.c  gamevars.cpp  hmodel.c  hmodel.h  hud.c  langenum.h  language.c  mempool.c  player.c  pmove.c  stratdef.c  targeting.c
src/avp/shapes/: Makefile  Makefile.am  Makefile.in
src/avp/support/: Makefile  Makefile.am  Makefile.in
src/avp/win95/: Makefile  Makefile.am  Makefile.in  dp_func.h  dplayext.h  multmenu.h  pldghost.c  pldghost.h  pldnet.c  pldnet.h  progress_bar.c  progress_bar.h  system.c
src/avp/win95/frontend/: Makefile  Makefile.am  Makefile.in  avp_menudata.c  avp_menudata.h  avp_menus.c  avp_menus.h  avp_mp_config.cpp  avp_userprofile.h
src/avp/win95/gadgets/: Makefile  Makefile.am  Makefile.in
src/dynamicGL/: oglfunc.c  oglfunc.h  opengl.c
src/nonDynamicGL/: main.c  opengl.c  opengl.h
src/win95/: Makefile  Makefile.am  Makefile.in
